# seogrowthlab

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  database.py  main.py  mcp_server.py  requirements.txt
frontend/: Dockerfile  auth.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  prisma.config.ts  tsconfig.json
frontend/app/api/login/: route.ts
frontend/app/api/register/: route.ts
frontend/app/lib/: langgraph.ts  prisma.ts  redis.ts
frontend/frontends/: Dockerfile
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260130170401_add_user_and_post_models/: migration.sql
frontend/prisma/migrations/20260130185230_add_audit_models/: migration.sql
frontend/prisma/migrations/20260131135126_init_fixed/: migration.sql
services/crawler-service/: Cargo.toml
services/crawler-service/src/: main.rs
